fix(leaderboard-page): prevent layout shift on active filter button

--- a/src/components/Pages/Leaderboards/LeaderBoard/LeaderBoard.module.scss
+++ b/src/components/Pages/Leaderboards/LeaderBoard/LeaderBoard.module.scss
@@ -4,7 +4,7 @@
   width: 100%;
   min-height: 661.6px;
   margin: 30px 0 40px;
-  padding: 24px;
+  padding: 20px;
   padding-top: 0;
   border-radius: 16px;
   background-color: #131820;
