--- a/src/components/Pages/Leaderboards/LeaderBoard/LeaderboardHeader/LeaderboardHeader.module.scss
+++ b/src/components/Pages/Leaderboards/LeaderBoard/LeaderboardHeader/LeaderboardHeader.module.scss
@@ -21,7 +21,7 @@
 @media (max-width: 1300px) {
   .header {
     margin: 10px 20px 0;
-    padding: 24px;
+    padding: 20px;
     margin-inline: 0;
     background-color: #14171d;
     width: calc(100% - 4px);
