--- a/src/components/Shared/Cards/FilterCard/FilterCard.module.scss
+++ b/src/components/Shared/Cards/FilterCard/FilterCard.module.scss
@@ -2,7 +2,7 @@
   background-color: #131820;
   border: 1px solid #2A3040;
   border-radius: 1rem;
-  padding: 24px;
+  padding: 20px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, .1);
   position: relative;
   transition: border-color .3s;
@@ -16,7 +16,7 @@
   content: "";
   position: absolute;
   left: 24px;
-  top: 28px;
+  top: 24px;
   width: 4px;
   height: 20px;
   background: linear-gradient(135deg, #FFB800, #FF9000);
